--- a/forumsite/templates/forumsite/thread.html
+++ b/forumsite/templates/forumsite/thread.html
@@ -7,6 +7,106 @@
 
 {% block maincontent %}
     <div class="col-sm-8">
+        <div class="main-postthread">
+            <article class="post">
+                <div>
+                    <header class="post-header">
+                        <ul>
+                            <li class="postitem-user">
+                                <div class="postauthor">
+                                    <h3>
+                                        <img src="{% static 'forumsite/images/avastar.jpg' %}" class="avatar img-circle">
+                                        <span class="authorname">Luceos</span>
+                                    </h3>
+                                </div>
+                            </li>
+                            <li class="postitem-meta">
+                                <div class="postmeta">
+                                    <time>2016-01-04 09:46</time>
+                                </div>
+                            </li>
+                        </ul>
+                    </header>
+                    <div class="post-body">
+                        <h1>International community, Flarum in your language</h1>
+                        <p>In collaboration with some community members i've set up an portal for the international support. these can be found when visiting.<a href="#">gitter</a> and we'll gladdly arrange this for you . please note a language extension must be available.</p>
+                    </div>
+                    <aside class="post-actions">
+                        <ul>
+                            <li class="item-like">
+                                <button type="button">Like</button>
+                            </li>
+                            <li class="item-reply">
+                                <button type="button">Reply</button>
+                            </li>
+                        </ul>
+                    </aside>
+                    <footer class="post-footer">
+                        <ul>
+                            <li class="item-liked">
+                                <div class="post-likecontainer">
+                                    <a href="#">
+                                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                                    </a>
+                                    <span class="like-counts">10</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </footer>
+                </div>
+            </article>
+        </div>
+        <div class="reply-container">
+            <div class="reply">
+                <article class="post">
+                    <div>
+                        <header class="post-header">
+                            <ul>
+                                <li class="postitem-user">
+                                    <div class="postauthor">
+                                        <h3>
+                                            <img src="{% static 'forumsite/images/avastar.jpg' %}" class="avatar img-circle">
+                                            <span class="authorname">Luceos</span>
+                                        </h3>
+                                    </div>
+                                </li>
+                                <li class="postitem-meta">
+                                    <div class="postmeta">
+                                        <time>2016-01-04 13:47</time>
+                                    </div>
+                                </li>
+                            </ul>
+                        </header>
+                        <div class="post-body">
+                            <p>In collaboration with some community members i've set up an portal for teh international</p>
+                            <img src="{%static 'forumsite/images/images.png'%}">
+                        </div>
+                        <aside class="post-actions">
+                            <ul>
+                                <li class="item-like">
+                                    <button type="button">Like</button>
+                                </li>
+                                <li class="item-reply">
+                                    <button type="button">reply</button>
+                                </li>
+                            </ul>
+                        </aside>
+                        <footer class="post-footer">
+                            <ul>
+                                <li class="item-liked">
+                                    <div class="post-likecontainer">
+                                        <a href="#">
+                                            <span class="glyphicon glyphicon-thumbs-up"></span>
+                                        </a>
+                                        <span class="like-counts">10</span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </footer>
+                    </div>
+                </article>
+            </div>
+        </div>
     </div>
     <div class="col-sm-2">
 
