--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -18,9 +18,50 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        
+        <style>
+         
+        </style>
+        
     </head>
     
     <body>
+        <div class="modal fade" id="dialog-login">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4>Login</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p> it's time to register and login this forume</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Login</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="dialog-register">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4>Register</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>it's time to register in this forum </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Register</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -40,8 +81,8 @@
                         <li><a href="#">关于</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right login-register">
-                        <li><a href="#">登陆</a></li>
-                        <li><a href="#">注册</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#dialog-login">登陆</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#dialog-register">注册</a></li>
                     </ul>
                     <ul class="navbar-right search">
                         <li>
@@ -54,6 +95,7 @@
                 </div>
             </div>
         </nav>
+        
         
         <div class="container">
             <div class="row">
@@ -88,6 +130,7 @@
         
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="{% static 'forumsite/js/jquery-1.11.3.js'%}"></script>
+        <script src="{% static 'forumsite/js/bootstrap.min.js' %}"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         {% block includeScript %}   {% endblock %}
     </body>
