--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edget">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        
+
         <title>My Forum</title>
         
         <!--bootstrap-->
@@ -27,37 +27,60 @@
     
     <body>
         <div class="modal fade" id="dialog-login">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header text-center">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <h4>Login</h4>
+                        <h5>登陆</h5>
                     </div>
                     <div class="modal-body">
-                        <p> it's time to register and login this forume</p>
+                        <form role="form">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="useraccount" placeholder="账号">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="pwd" placeholder="密码">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-warning form-control">登陆</button>
+                            </div>
+                        </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Login</button>
+                        <p>忘记密码? <a href="#">找回密码</a></p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="modal fade" id="dialog-register">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header text-center">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <h4>Register</h4>
+                        <h5>注册</h5>
                     </div>
                     <div class="modal-body">
-                        <p>it's time to register in this forum </p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Register</button>
+                        <form role="form">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="useraccount" placeholder="账号">
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="email" placeholder="邮箱地址">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="pwd" placeholder="密码">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="pwd" placeholder="重复密码">
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-warning form-control">注册</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -95,7 +118,6 @@
                 </div>
             </div>
         </nav>
-        
         
         <div class="container">
             <div class="row">
