--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -36,12 +36,13 @@
                         <h5>登陆</h5>
                     </div>
                     <div class="modal-body">
-                        <form role="form">
+                        <form role="form" action="/login/" method="post">
+                            {% csrf_token %}
                             <div class="form-group">
-                                <input type="text" class="form-control" id="useraccount" placeholder="账号">
+                                <input type="text" class="form-control" id="useraccount" name="useraccount" placeholder="账号">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="pwd" placeholder="密码">
+                                <input type="password" class="form-control" id="pwd" name="password" placeholder="密码">
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-warning form-control">登陆</button>
@@ -64,7 +65,8 @@
                         <h5>注册</h5>
                     </div>
                     <div class="modal-body">
-                        <form role="form">
+                        <form role="form" action="/register/" method="post">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <input type="text" class="form-control" id="useraccount" placeholder="账号">
                             </div>
