--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -84,16 +84,16 @@
                         <form role="form" action="/register/" method="post">
                             {% csrf_token %}
                             <div class="form-group">
-                                <input type="text" class="form-control" id="useraccount" placeholder="账号">
+                                <input type="text" class="form-control" id="useraccount" name="username" placeholder="账号">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" id="email" placeholder="邮箱地址">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="邮箱地址">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="pwd" placeholder="密码">
+                                <input type="password" class="form-control" id="pwd" name="password1"  placeholder="密码">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="pwd" placeholder="重复密码">
+                                <input type="password" class="form-control" id="pwd" name="password2" placeholder="重复密码">
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-warning form-control">注册</button>
@@ -122,17 +122,17 @@
                         <li><a href="#">关于</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right login-register">
-                        {% if 1 %}
+                        {% if user.is_authenticated %}
                         <li>
                             <button class="btn btn-default btn-userinfo dropdown-toggle" data-toggle="dropdown">
                                 <img src="{% static 'forumsite/images/avastar.jpg'%}" class="img-circle userhead">
-                                <span>Disemboltura</span>    
+                                <span>Disemboltura</span>
                             </button>
                             <ul class="dropdown-menu usermenu">
                                 <li><a href="#">HTML</a></li>
                                 <li><a href="#">HTML</a></li>
                                 <li><a href="#">HTML</a></li>
-                                <li><a href="#">HTML</a></li>
+                                <li><a href="/logout">退出</a></li>
                             </ul>
                         </li>
                         {% else %}
