--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -37,6 +37,9 @@
                 box-shadow: 0 2px 6px rgba(0,0,0,35);
                 background-color: #f8f8f8;
             }
+            .btn-postthread {
+                padding:3px;
+            }
             </style>
         
     </head>
@@ -126,7 +129,11 @@
                         <li>
                             <button class="btn btn-default btn-userinfo dropdown-toggle" data-toggle="dropdown">
                                 <img src="{% static 'forumsite/images/avastar.jpg'%}" class="img-circle userhead">
-                                <span>Disemboltura</span>
+                                <span>{{ user.username }}</span>
+                            </button>
+                            <button type="button" class="btn btn-warning btn-postthread btn-xs">
+                                <span class="glyphicon glyphicon-edit"></span>
+                                <span> <b>发帖</b></span>
                             </button>
                             <ul class="dropdown-menu usermenu">
                                 <li><a href="#">HTML</a></li>
