alter front design

--- a/forumsite/static/forumsite/css/index.css
+++ b/forumsite/static/forumsite/css/index.css
@@ -44,7 +44,7 @@ ul {
 
 .category-tag {
     padding-right:7px;
-    font-size:16px;
+    font-size:17px;
 }
 
 .cate-li {
@@ -132,7 +132,7 @@ a.thread-item {
 }
 
 time {
-    color:darkkhaki;
+    color:#7089a9;
     margin-left: 15px;
 }
 
