--- a/forumsite/templates/forumsite/forumIndex.html
+++ b/forumsite/templates/forumsite/forumIndex.html
@@ -25,7 +25,7 @@
                                     </li>
                                     <li class="threadpost-info">
                                         <span class="username">Disemboltura</span>
-                                        <time>two days ago</time>
+                                        <time>两天前</time>
                                     </li>
                                 </ul>
                             </a>
