--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -19,32 +19,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
         <link href="{% static 'forumsite/css/tag.css' %}" rel="stylesheet">
-        <style>
-            .userhead {
-                width:24px;
-                height: 24px;
-            }
-            .btn-userinfo {
-                border:none;
-                background-color:#f8f8f8;
-                margin-top:5px;
-            }
-            .btn-userinfo:focus {
-                background-color: #f8f8f8;
-            }
-            .usermenu {
-                border-radius: 0;
-                box-shadow: 0 2px 6px rgba(0,0,0,35);
-                background-color: #f8f8f8;
-            }
-            .btn-postthread {
-                padding:3px;
-            }
-            .category-top:hover {
-                text-decoration: none;
-                color:coral;                
-            }
-            </style>
+        <link href="{% static 'forumsite/css/base.css' %}" rel="stylesheet">
         
     </head>
     
