--- a/forumsite/templates/forumsite/post.html
+++ b/forumsite/templates/forumsite/post.html
@@ -1,14 +1,14 @@
 {% extends 'forumsite/base.html' %}
 {% load staticfiles %}
-
 {% block linkstyle %}
     <link href="{% static 'forumsite/css/post.css' %}" rel="stylesheet">
 {% endblock %}
-
 {% block maincontent %}
-
+    <div class="col-sm-8">
+    </div>
+    <div class="col-sm-2">
+    </div>
 {% endblock %}
-
 {% block includeScript %}
 
 {% endblock %}
