add rich text editor

--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -168,7 +168,7 @@
         </div>
         
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="{% static 'forumsite/js/jquery-1.11.3.js'%}"></script>
+        <script src="{% static 'forumsite/js/jquery-2.2.0.min.js'%}"></script>
         <script src="{% static 'forumsite/js/bootstrap.min.js' %}"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         {% block includeScript %}   {% endblock %}
