add summernote editor

--- a/forumsite/templates/forumsite/post.html
+++ b/forumsite/templates/forumsite/post.html
@@ -4,44 +4,33 @@
     <link href="{% static 'forumsite/css/post.css' %}" rel="stylesheet">
     
     <link href="{% static 'forumsite/css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="{% static 'forumsite/css/editor.css' %}" rel="stylesheet">
-    
+    <link href="{% static 'forumsite/css/summernote.css'%}" rel="stylesheet">
 
 {% endblock %}
 {% block maincontent %}
     <div class="col-sm-8">
-        <textarea id="txtEditor"></textarea>
+        <div id="summernote"></div>
         
-        <button type="button" class="btn btn-warning" onclick="gettext()"> 提交</button>
-        
+        <button type="button" class="btn btn-warning" onclick="save()">保存</button>
     </div>
     <div class="col-sm-2">
     </div>
 {% endblock %}
 {% block includeScript %}
-    <script src="{% static 'forumsite/js/editor.js' %}"></script>
+    <script src="{% static 'forumsite/js/summernote.min.js' %}"></script>
 
     <script>
-        $(document).ready(function(){
-            var editor = $("#txtEditor").Editor();
-               editor('createMenuItem', {"text": "TouchGlasses", //Text replaces icon if its not available
-                              "icon":"fa fa-glass", //This is a Font-Awesome Icon 
-                              "tooltip": "Touch Glasses",
-                              "custom": function(button, parameters){ 
-                                            //Your Custom Function.
-                                          alert("Cheers!!!");
-                                        },
-                              "params": {'option1':"value1"} //Any custom parameters you want to pass
-                                                               //to your custom function.
-                });
-        });
+         $(document).ready(function(){
+             $("#summernote").summernote({
+                 height: 300,
+                 placeholder: '在这里输入.....'
+             });
+             
+         });   
         
-        function gettext(){    
- 
-            var text = $("#txtEditor").Editor("getText");
-            alert(text);
+        function save(){
+            var markup = $("#summernote").summernote('code');
+            alert(markup);
         }
-    
-        
     </script>
 {% endblock %}
