--- a/forumsite/templates/forumsite/post.html
+++ b/forumsite/templates/forumsite/post.html
@@ -2,32 +2,57 @@
 {% load staticfiles %}
 {% block linkstyle %}
     <link href="{% static 'forumsite/css/post.css' %}" rel="stylesheet">
-    
     <link href="{% static 'forumsite/css/font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'forumsite/css/summernote.css'%}" rel="stylesheet">
+    <style>
+        #thread-title {
+            width:100%;
+        }
+    </style>
 
 {% endblock %}
 {% block maincontent %}
     <div class="col-sm-8">
-        <div id="summernote"></div>
         
-        <button type="button" class="btn btn-warning" onclick="save()">保存</button>
+        <div class="edit-container">
+            <form class="form-horizontal" role="form" action="/commit/" method="POST">
+                <div class="form-group">
+                    <label class="sr-only" for="thread-title">标题</label>
+                    <input type="text" id="thread-title" class="form-control" name="threadTitle" placeholder="请输入标题">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="select-category">分类</label>
+                    <select class="form-control" id="select-category" name="catetory">
+                        <option> - 请选择分类 - </option>
+                        <option><span class="glyphicon glyphicon-stop category-tag tag-equp"></span>装备</option>
+                        <option><span class="glyphicon glyphicon-stop category-tag tag-language"></span>语言</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="thread-title">内容</label>
+                    <div id="summernote" class="form-control" name="content"></div>
+                    <button type="submit" class="btn btn-warning pull-right">提交</button>
+                </div>
+            </form>
+        </div>
+
     </div>
     <div class="col-sm-2">
     </div>
 {% endblock %}
 {% block includeScript %}
     <script src="{% static 'forumsite/js/summernote.min.js' %}"></script>
-
     <script>
          $(document).ready(function(){
              $("#summernote").summernote({
                  height: 300,
-                 placeholder: '在这里输入.....'
+                 placeholder: '在这里输入内容.....'
              });
-             
          });   
-        
+         function getsize(){
+            alert($("#summernote").width());
+         };
+             
         function save(){
             var markup = $("#summernote").summernote('code');
             alert(markup);
