--- a/forumsite/templates/forumsite/post.html
+++ b/forumsite/templates/forumsite/post.html
@@ -15,7 +15,8 @@
     <div class="col-sm-8">
         
         <div class="edit-container">
-            <form class="form-horizontal" role="form" action="/commit/" method="POST">
+            <form class="form-horizontal" role="form" action="/commit/" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
                 <div class="form-group">
                     <label class="sr-only" for="thread-title">标题</label>
                     <input type="text" id="thread-title" class="form-control" name="threadTitle" placeholder="请输入标题">
@@ -29,9 +30,9 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label class="sr-only" for="thread-title">内容</label>
-                    <div id="summernote" class="form-control" name="content"></div>
+                    <textarea id="summernote" class="form-control" name="content"></textarea>
                     <button type="submit" class="btn btn-warning pull-right">提交</button>
+                    <button type="button" class="btn btn-default" onclick="myInesrtImg()">查看提交的内容</button>
                 </div>
             </form>
         </div>
@@ -45,17 +46,17 @@
     <script>
          $(document).ready(function(){
              $("#summernote").summernote({
-                 height: 300,
-                 placeholder: '在这里输入内容.....'
+                 height: 300
              });
          });   
-         function getsize(){
-            alert($("#summernote").width());
-         };
-             
+        
+        function myInesrtImg(){
+            $("#summernote").summernote('insertImage', "{% static 'forumsite/images/images.png'%}", 'The-Apple-Hack-And-What-It-Means-To-You.jpg')
+        }
+
         function save(){
             var markup = $("#summernote").summernote('code');
-            alert(markup);
+            console.log(markup);
         }
     </script>
 {% endblock %}
