--- a/forumsite/templates/forumsite/forumIndex_test.html
+++ b/forumsite/templates/forumsite/forumIndex_test.html
@@ -10,32 +10,34 @@
     <div class="col-sm-10 threadlist-container">
         <div class="postlist">
             <ul class="postthreads">
+                {% for thread in threads %}
                 <li>
                     <div class="thread">
                         <div class="thread-container">
                             <a href="#" class="author">
                                 <img src="{% static 'forumsite/images/avastar.jpg'%}" class="img-circle avatar">
                             </a>
-                            <a href="#" class="thread-item">
-                                <h3 class="thread-title">在新加坡做面试官的经历(Interviewer Experience for UI/UX</h3>
+                            <a href="/{{thread.categoryid.nameEN}}/{{ thread.hashcode }}" class="thread-item">
+                                <h3 class="thread-title">{{ thread.title }}</h3>
                                 <ul class="thread-info">
                                     <li class="thread-tags">
-                                        <span class="label label-primary thread-label tag-{{cate.nameEN}}">Installation</span>
+                                        <span class="label label-primary thread-label tag-{{thread.categoryid.nameEN}}-bk">{{ thread.categoryid.nameCN}} </span>
 <!--                                        <span class="label label-default thread-label">Tutorial</span>-->
                                     </li>
                                     <li class="threadpost-info">
-                                        <span class="username">Disemboltura</span>
-                                        <time>两天前</time>
+                                        <span class="username">{{ thread.userid.username }}</span>
+                                        <time>{{ thread.pushtime }}</time>
                                     </li>
                                 </ul>
                             </a>
                             <span class="comment-container">
                                 <span class="glyphicon glyphicon-comment"></span>
-                                <span class="comment-count">200</span>
+                                <span class="comment-count">{{ thread.commentsCount }}</span>
                             </span>
                         </div>
                     </div>
                 </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
