--- a/forumsite/templates/forumsite/post.html
+++ b/forumsite/templates/forumsite/post.html
@@ -13,30 +13,29 @@
 {% endblock %}
 {% block maincontent %}
     <div class="col-sm-8">
-        
         <div class="edit-container">
             <form class="form-horizontal" role="form" action="/commit/" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-group">
                     <label class="sr-only" for="thread-title">标题</label>
-                    <input type="text" id="thread-title" class="form-control" name="threadTitle" placeholder="请输入标题">
+                    <input type="text" id="thread-title" class="form-control" name="title" placeholder="请输入标题">
                 </div>
                 <div class="form-group">
                     <label class="sr-only" for="select-category">分类</label>
-                    <select class="form-control" id="select-category" name="catetory">
-                        <option> - 请选择分类 - </option>
-                        <option><span class="glyphicon glyphicon-stop category-tag tag-equp"></span>装备</option>
-                        <option><span class="glyphicon glyphicon-stop category-tag tag-language"></span>语言</option>
+                    <select class="form-control" id="select-category" name="category">
+                        <option value="0"> - 请选择分类 - </option>
+                        {% for cate in categories %}
+                            <option value="{{ cate.categoryid }}"><span class="glyphicon glyphicon-stop category-tag tag-equp"></span>{{ cate.nameCN }}</option>
+                        {% endfor %}
+                        
                     </select>
                 </div>
                 <div class="form-group">
                     <textarea id="summernote" class="form-control" name="content"></textarea>
                     <button type="submit" class="btn btn-warning pull-right">提交</button>
-                    <button type="button" class="btn btn-default" onclick="myInesrtImg()">查看提交的内容</button>
                 </div>
             </form>
         </div>
-
     </div>
     <div class="col-sm-2">
     </div>
