--- a/forumsite/templates/forumsite/base.html
+++ b/forumsite/templates/forumsite/base.html
@@ -31,8 +31,9 @@
                     <div class="modal-body">
                         <form role="form" action="/login/" method="post">
                             {% csrf_token %}
+                            <div class="alert alert-info" role="alert" id="info-login"></div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="useraccount" name="useraccount" placeholder="账号">
+                                <input type="text" class="form-control" id="useraccount-login" name="useraccount" placeholder="账号">
                             </div>
                             <div class="form-group">
                                 <input type="password" class="form-control" id="pwd" name="password" placeholder="密码">
@@ -60,17 +61,18 @@
                     <div class="modal-body">
                         <form role="form" action="/register/" method="post">
                             {% csrf_token %}
+                            <div class="alert alert-info" role="alert" id="info-register">注册账号</div>
                             <div class="form-group">
-                                <input type="text" class="form-control" id="useraccount" name="username" placeholder="账号">
+                                <input type="text" class="form-control" id="useraccount-register" name="username" placeholder="账号">
                             </div>
                             <div class="form-group">
                                 <input type="email" class="form-control" id="email" name="email" placeholder="邮箱地址">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="pwd" name="password1"  placeholder="密码">
+                                <input type="password" class="form-control" id="pwd1" name="password1"  placeholder="密码">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="pwd" name="password2" placeholder="重复密码">
+                                <input type="password" class="form-control" id="pwd2" name="password2" placeholder="重复密码">
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-warning form-control">注册</button>
