small modify on style

--- a/forumsite/static/forumsite/css/base.css
+++ b/forumsite/static/forumsite/css/base.css
@@ -75,3 +75,7 @@ a.category-top {
      text-decoration: none;
      color:coral;                
  }
+
+.register-login-warning {
+    border:solid 2px brown;
+}
